--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1369,5 +1369,5 @@ div.name > b > a {
 * Category / SubCategory side menu styleing
 */
 .side-menu {
-  border-right: 1px solid lightgray;
+  border-right: 1px solid #eeeeee;
 }
