--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-sm-4 col-md-3">
+<div class="col-xs-6 col-sm-4 col-md-3 side-menu">
   <%= render :partial => 'categories/search' %>
   <%= render :partial => 'partials/side_menu', locals: {
     campus: @campus,
@@ -11,12 +11,18 @@
     sale: @sale,
     services: @services,
     unboxing: @unboxing,
-    is_subcat: is_subcat,
+    subcategory: @subcategory,
   } %>
 </div>
 
 <div class="col-xs-6 col-sm-8 col-md-9">
+  <%= link_to 'Connechub', root_path %> > <%= link_to @category.name, @category %> <%= @subcategory ? ' > ' + @subcategory.name : '' %>
+  <hr />
+</div>
+
+<div class="col-xs-6 col-sm-8 col-md-9">
   <div class="grid">
+
     <% if @listings.present? %>
     
     <% @listings.each do |listing| %>
