--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -30,7 +30,7 @@
     <% end %>
   </div>
 
-  <hr>
+  <hr />
 
   <div class="col-xs-6 col-sm-4 col-md-2 side-menu">
     <%= render :partial => 'partials/side_menu', locals: {
@@ -42,8 +42,7 @@
       jobs: @jobs,
       sale: @sale,
       services: @services,
-      unboxing: @unboxing,
-      is_subcat: false,
+      unboxing: @unboxing
     } %>
   </div>
 
