--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -15,7 +15,6 @@
     listings: @listings,
     sale: @sale,
     services: @services,
-    unboxing: @unboxing,
-    is_subcat: false,
+    unboxing: @unboxing
   }  %>
 </div>
