FIXED Listings not showing in Category Show VW.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,6 +9,7 @@
     listings: @listings,
     sale: @sale,
     services: @services,
-    unboxing: @unboxing
+    unboxing: @unboxing,
+    listings: @listings
   }  %>
 </div>
