--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -255,7 +255,7 @@ youtube,
                         </ul>
                       </li>
                       <li class="li_no_bg">
-                        <span class="ts-copy">© Connechub 2019</span>
+                        <span class="ts-copy">© Connechub <%= Date.today.year %></span>
                       </li>
                     </ul>
                 </div>
