FIXED issue where Listing VW Edit would not allow special characters.

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -88,8 +88,8 @@
                             class: "form-control",
                             required: true,
                             type: "regexp",
-                            maxlength: "128",
-                            pattern: "[A-Za-z\s]+",
+                            maxlength: "256",
+                            pattern: "[A-Za-z0-9!$,.?\ ]+{256}",
                             placeholder: "exp. Text only Listing Title"
                         %>
                     </div>
