--- a/app/views/partials/_item_card.erb
+++ b/app/views/partials/_item_card.erb
@@ -1,9 +1,20 @@
-<%= link_to (
-    videojs_rails sources: {mp4: listing.presigned_media_url},
-        controls: true,
-        autoplay: false,
-        preload: true,
-        setup: "{}",
-        class: 'img-responsive'),
-    listing
-%>
+<div class="panel panel-default grid-item">
+    <div class="panel-body">
+    <%= link_to image_tag(
+        "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3" + (ENV['REGION'] != 'us-east-1' ? '-' + ENV['REGION'] : '') + ".amazonaws.com/" + listing.media_file_name + "-1m-00001.png",
+        class: "img-responsive",
+        onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
+    ), listing %>
+    </div>
+    <div class="panel-footer pin-content">
+        <div class="price"><b>$<%= listing.price %></b></div>
+        <div class="name"><b><%= link_to listing.title, listing %></b></div>
+        <div class="description"><%= listing.city %>, <%= listing.state %></div>
+        <small class="board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
+        <hr>
+        <div>
+            <%= image_tag listing.user.avatar.url(:thumb), class: 'pin-avatar'%>
+            <b><%= link_to listing.user.username, user_path(listing.user.username) %></b>
+        </div>
+    </div>
+</div>
