--- a/app/views/partials/_google_analytics.erb
+++ b/app/views/partials/_google_analytics.erb
@@ -1,8 +1,8 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src='https://www.googletagmanager.com/gtag/js?id=<%= ENV["GOOGLEANALYTICS"] %>'></script>
+<script async src='https://www.googletagmanager.com/gtag/js?id=<%= ENV["GOOGLE_ANALYTICS"] %>'></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '<%= ENV["GOOGLEANALYTICS"] %>');
+  gtag('config', '<%= ENV["GOOGLE_ANALYTICS"] %>');
 </script>
