UPDATED About Us header image per https://trello.com/c/5BQUdTkF/35-update-about-us-photo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1144,7 +1144,7 @@ div.panel-body > a > img {
 
 .business-header {
   height: 400px;
-  background: url("blpic.jpg") center center no-repeat scroll;
+  background: url("connechub_about_us.jpg") center center no-repeat scroll;
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
   // background-size: cover;
