--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,20 +16,14 @@
 
         <div class="row">
             <div class="col-sm-8">
-
                 <%# 0.5625 w:w ratio %>
                 <iframe width="480" height="270" src="https://www.youtube-nocookie.com/embed/dLcNdWQ92a8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-
                 <h2>About Us</h2>
-                <p>As a classified advertisement platform Connechub is "Connecting you with jobs, goods, and services in your community."</p>
-                <p>With Connechub you can post a video ad from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
-                <p>As the old clich goes, "A picture is worth a thousand words".</p>
-                <p>However, "a video is worth a million more".</p>
+                <p>Connechub is a local classified ad website that allows users to post their video content; to list a job, promote your business, unbox the latest item, or sell your stuff.</p>
+                <p>With Connechub you can post your video content from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
+                <p>As the old cliche goes, "A picture is worth a thousand words". However, "a video is worth a million more".</p>
                 <br>
-
-                <p>
-                    <a class="btn btn-default btn-lg" href="/users/sign_up">Sign Up</a>
-                </p>
+                <p><a class="btn btn-default btn-lg" href="/users/sign_up">Sign Up</a></p>
             </div>
             <div class="col-sm-4">
                 <h2>Contact Us</h2>
