UPDATED about us and newsletter content. ClOSES https://trello.com/c/Di4sjIO0/51-add-newsletter-data. CLOSES https://trello.com/c/6674txFF/33-update-about-us-page-with-new-verbiage .

--- a/app/views/pages/newsletter.html.erb
+++ b/app/views/pages/newsletter.html.erb
@@ -9,6 +9,39 @@
         <h2 class="featurette-heading">Welcome to Connechub Newsletter!</h2>
 
         <hr class="featurette-divider">
+
+        <p>Connechub feels that it takes a community of one to provide an experience that is safe and easy to use. As a company, we will listen to the needs of our users and will continue to make changes to improve the environment.</p>
+
+        <p>Things that were added to enhance the Connechub experience</p>
+
+        <p>Changes early on (ore 1.1.10)</p>
+
+        <li>email should not be allowed as username</li>
+        <li>new subcategories recently added in the services category are missing.</li>
+        <li>Research automatic quality switching for video playback.</li>
+        <li>Unable to edit my profile when I chose forget password. Enter my email I get an error ""</li>
+        <li>Condition of the item for sale.</li>
+        <li>Word wrap Listing title when long titles are used.</li>
+        <li>the system is not retaining my subcategory when i go to edit</li>
+        <li>"Sold" Button</li>
+        <li>Added favicon</li>
+        <li>Improved search results</li>
+
+        <p>Changes in (1.1.10)</p>
+
+        <li>New homepage slogan</li>
+        <li>Layout redesign</li>
+        <li>New Subcategories added to the Sale Category</li>
+        <li>Improved Facebook imagery</li>
+
+        <p>Changes inn (1.1.11)</p>
+
+        <li>About US redesign / verbiage / photo changes</li>
+
+        <p>Changes in (1.1.12)</p>
+        
+        <li>Improved Security</li>
+        <li>Apple/Google/Samsung Pay option to pay for your ad.</li>
     </div>
 
 </div>
