UPDATED about us VW. CLOSES https://trello.com/c/6674txFF/33-update-about-us-page-with-new-verbiage

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,14 +16,16 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <%# 0.5625 w:w ratio %>
                 <iframe width="480" height="270" src="https://www.youtube-nocookie.com/embed/dLcNdWQ92a8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-                <h2>About Us</h2>
-                <p>Connechub is a local classified ad website that allows users to post their video content; to list a job, promote your business, unbox the latest item, or sell your stuff.</p>
-                <p>With Connechub you can post your video content from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
-                <p>As the old cliche goes, "A picture is worth a thousand words". However, "a video is worth a million more".</p>
-                <br>
-                <p><a class="btn btn-default btn-lg" href="/users/sign_up">Sign Up</a></p>
+                <h2 class="featurette-heading">About Us</h2>
+                <p>Connechub is a local classified ad website where you can; Buy, Sell, Promote and Watch Local Video Classifieds.</p>
+                <p>With Connechub user can post their video content to;</p>
+                <p>Buy: tons of great items nearby - like home goods, electronics, and cars — from your neighbors</p>
+                <p>Sell: your stuff and make money, with something more than a picture — like a Video Ad on Connechub</p>
+                <p>Promote: your business with an eye-catching Video Ad to attract more customers</p>
+                <p>Watch: local videos and not pictures of real products and business services..</p>
+                <p>Connechub is simple and easy to post your video content from any source such as; your cellphone (Android, IOS), DLSR camera, Mirrorless Camera, Video camera and any other video source.</p>
+                <p>It's free, <a class="btn btn-default btn-lg" href="/users/sign_up">Sign Up</a></p>
             </div>
             <div class="col-sm-4">
                 <h2>Contact Us</h2>
