--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -242,7 +242,7 @@ youtube,
                       <li class="dropup">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Legal <i class="fa fa-sort"></i></span></a>
                         <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                          <li><%= link_to 'Terms of Conditions', terms_path %></li>
+                          <li><%= link_to 'Terms of Service', terms_path %></li>
                           <li><%= link_to 'Privacy Policy', privacy_path %></li>
                           <li><%= link_to 'Posting Terms of Use', postterm_path %></li>
                         </ul>
