--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -9,6 +9,8 @@
     listings: @listings,
     sale: @sale,
     services: @services,
-    unboxing: @unboxing
-  }  %>
+    unboxing: @unboxing,
+
+    listings: @listings,
+  } %>
 </div>
