--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,16 +1,8 @@
 <div>
   <%= render :partial => 'categories/show', locals: {
-    campus: @campus,
-    community: @community,
-    free: @free,
-    h2f: @h2f,
-    housing: @housing,
-    jobs: @jobs,
+    categories: @categories,
+    category: @category,
     listings: @listings,
-    sale: @sale,
-    services: @services,
-    unboxing: @unboxing,
-
-    listings: @listings,
+    subcategory: @subcategory,
   } %>
 </div>
