--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,7 +1,8 @@
 <div>
   <%= render :partial => 'categories/show', locals: {
-    listings: @listings,
+    categories: @categories,
     category: @category,
-    subcategory: @subcategory
+    listings: @listings,
+    subcategory: @subcategory,
   }  %>
 </div>
