--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -32,15 +32,7 @@
 
   <div class="col-xs-6 col-sm-4 col-md-2 side-menu">
     <%= render :partial => 'partials/side_menu', locals: {
-      campus: @categories[0],
-      community: @categories[1],
-      free: @categories[4],
-      h2f: @categories[3],
-      housing: @categories[2],
-      jobs: @categories[5],
-      sale: @categories[6],
-      services: @categories[7],
-      unboxing: @categories[8],
+      categories: @categories,
     } %>
   </div>
 
