--- a/app/views/partials/_side_menu.erb
+++ b/app/views/partials/_side_menu.erb
@@ -15,7 +15,8 @@
             <li class="landing_page">
               <%= link_to subcategory.name, category_subcategory_path(category, subcategory) %>
               <span class="cat_item_count">
-                <% # campus_subcat_posting_count[subcategory.id] != 0 ? campus_subcat_posting_count[subcategory.id] : '' %>
+                <% count = subcategory.listing_count(category.id, subcategory.id) %>
+                <%= count > 0 ? count : '' %>
               </span>
             </li>
             <% end %>
