FIXED side menu logic to show sub cats properly when user navigates around.

--- a/app/views/categories/_show.erb
+++ b/app/views/categories/_show.erb
@@ -2,6 +2,7 @@
   <%= render :partial => 'categories/search' %>
   <%= render :partial => 'partials/side_menu', locals: {
     categories: @categories,
+    subcategory: @subcategory,
   } %>
 </div>
 
