UPDATED ./bin. ADDED serviceworker gem and generated content for init. PWA implimentation.

--- a/app/assets/javascripts/serviceworker.js.erb
+++ b/app/assets/javascripts/serviceworker.js.erb
@@ -5,7 +5,17 @@ function onInstall(event) {
   console.log('[Serviceworker]', "Installing!", event);
   event.waitUntil(
     caches.open(CACHE_NAME).then(function prefill(cache) {
-      return cache.addAll(['/']);
+      return cache.addAll([
+
+        // make sure serviceworker.js is not required by application.js
+        // if you want to reference application.js from here
+        '<%#= asset_path "application.js" %>',
+
+        '<%= asset_path "application.css" %>',
+
+        '/offline.html',
+
+      ]);
     })
   );
 }
