--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -145,7 +145,8 @@ youtube,
     <%= render "partials/google_analytics" %>    
 
     <title><%= (@listing and @listing.title ? ENV['NAME'] + ' - ' + @listing.title : ENV['NAME'].capitalize ) %></title>
-  </head>
+  <link rel="manifest" href="/manifest.json" />
+<meta name="apple-mobile-web-app-capable" content="yes"></head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
