--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preload" rel="manifest" href="/manifest.json">
-
-    <link rel="preload" rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="preload" rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="preload" rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="preload" rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="preload" rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="preload" rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
 
     <meta charset="UTF-8">
     <meta name="description" content="Buy, Sell, Promote and Watch Local Video Classifieds.">
@@ -107,10 +93,10 @@ youtube,
       <title><%= ENV['NAME'].capitalize + ' - ' + @listing.title %></title>
       <meta name="name" content="<%= ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] %>">
 
-      <!-- header tags for listing views -->
-      <link rel="preload" href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
-
+      <!-- VideoJs assets -->
+      <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
       <script src="https://unpkg.com/video.js/dist/video.js"></script>
+
       <% # add OG meta tags if on a Listing VW page. We know this as that is the only view to have a @listing object
       set_meta_tags og: {
         description: 'Buy, Sell, Promote and Watch Local Video Classifieds.' + @listing.title,
