--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <meta charset="UTF-8">
     <meta name="description" content="Buy, Sell, Promote and Watch Local Video Classifieds.">
