--- a/app/assets/javascripts/serviceworker.js.erb
+++ b/app/assets/javascripts/serviceworker.js.erb
@@ -1,15 +1,13 @@
 var CACHE_VERSION = 'v1';
-var CACHE_NAME = CACHE_VERSION + ':sw-cache-';
+var CACHE_NAME = CACHE_VERSION + ':<%= ENV['NAME'] %>-cache';
 
 function onInstall(event) {
   console.log('[Serviceworker]', "Installing!", event);
   event.waitUntil(
     caches.open(CACHE_NAME).then(function prefill(cache) {
       return cache.addAll([
-
         // make sure serviceworker.js is not required by application.js
         // if you want to reference application.js from here
-        '<%#= asset_path "application.js" %>',
         '<%= asset_path "application.css" %>',
         '/offline.html',
       ]);
@@ -39,9 +37,15 @@ function onActivate(event) {
 function onFetch(event) {
   event.respondWith(
     // try to return untouched request from network first
-    fetch(event.request).catch(function() {
+    fetch(event.request)
+      .then(function(response) {
+        console.log('store request/response in cache.')
+        // return cache(event.request, response)
+      })
+      .catch(function() {
       // if it fails, try to return request from the cache
-      return caches.match(event.request).then(function(response) {
+      return caches.match(event.request)
+        .then(function(response) {
         if (response) {
           return response;
         }
@@ -59,3 +63,13 @@ function onFetch(event) {
 self.addEventListener('install', onInstall);
 self.addEventListener('activate', onActivate);
 self.addEventListener('fetch', onFetch);
+
+function cache(request, response) {
+  if (response.type === "error" || response.type === "opaque") {
+    return Promise.resolve(); // do not put in cache network errors
+  }
+
+  return caches
+    .open(CACHE_NAME)
+    .then(cache => cache.put(request, response.clone()));
+}
