--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,8 @@
                 <div class="panel-body">
                     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                     <%= devise_error_messages! %>
+                    <%= flash[:recaptcha_error] %>
+                    <%= recaptcha_tags %>
                     <fieldset>
                         <div class="row">
                             <div class="col-sm-12 col-md-10  col-md-offset-1 ">
