ADDED TRIX rich text editor per https://github.com/maclover7/trix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,8 @@
  *= require 'masonry/gutters'
  *= require 'masonry/infinitescroll'
  *= require 'masonry/right-to-left'
-  */
+ *= require trix
+*/
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
